--- a/rtw_union.qmd
+++ b/rtw_union.qmd
@@ -3,9 +3,13 @@ title: "Comparing union density rates in right-to-work versus non-right-to-work 
 author: "Jori Kandra and Emma Cohn"
 format: html
 editor: visual
+execute: 
+  eval: false
 ---
 
 Use this code to find union density rates for right-to-work versus non-right-to-work states using the [EPI CPS microdata extracts](https://economic.github.io/earn_code_library/epi_microdata.html).
+
+\[**2/10/26 UPDATE:** See here for a more accurate way to assign RTW vs non-RTW labels that takes into account changes in status over time. The code below has not been updated to account for this new methodology.\]
 
 **Note:** This code requires the use of an additional csv file to assign the RTW vs non-RTW labels to each state. Download the file [here](https://s3.amazonaws.com/media.earn.us/files/geo_rtw_labels.csv) and save to your project before running code.
 
@@ -14,7 +18,6 @@ You can edit this file (and the relevant code below) to change how states are gr
 The following chunk of code loads the R libraries necessary for this exercise. You may need to install them to run this code.
 
 ```{r, Libraries, message=FALSE}
-
 #Load necessary libraries
 library(tidyverse)
 library(here)
@@ -31,8 +34,6 @@ library(openxlsx)
 In this chunk, you'll define the sheet function for the generated workbook and apply some formatting. This helps with readability and condenses the code.
 
 ```{r, Create and format output workbook, message=FALSE}
-
-
 # Define sheet function
 sheet_fun <- function(data, wb, s, format = NULL) {
   # Add a worksheet to workbook object
@@ -67,13 +68,12 @@ sheet_fun <- function(data, wb, s, format = NULL) {
 Running this script chunk will call the BLS Current Population Survey ORG data required to calculate union density. It will also use the **geo_rtw_labels.csv** file you downloaded to label each state as "RTW" or "Non-RTW."
 
 ```{r, Download and clean data, message=FALSE}
-
 # Set objects to download
 var_list <- c("year", "month", "age", "statefips", 
               "wage", "union", "lfstat")
 
 # Load supplemental RTW label data
-geo_rtw_labels <- read.csv(here("input/geo_rtw_labels.csv")) %>% 
+geo_rtw_labels <- read.csv("./geo_rtw_labels.csv")) %>% 
   select(statefips, rtw, rtw_timeline_lab)
 
 # Import CPS ORG data
